# Assusa

./: .cursorrules  .dockerignore  .env.sample  .eslintrc.json  .gitignore  .sample.env  Dockerfile  Postman.md  README.md  README_SITE.md  SETUP.md  TODO.md  app.js  docker-compose.yml  index.html  package-lock.json  package.json  privacy.html  project-context.md
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile
docs/: ANALISE_ESTRUTURAL.md  API_INTEGRATIONS.md  ARCHITECTURE.md  CHANGELOG_IMPLEMENTACAO.md  CONFIGURATION.md  DEPLOY.md  DEVELOPMENT.md  ENV_TEMPLATE.md  GETTING_STARTED.md  PRODUCAO.md  Postman.md  README.md  README_SITE.md  REVISAO_BOLETOS_SICOOB.md  TODO.md  VALIDACAO_MANUAL.md  deploy.md  fluxo-mensagens.md  project-context.md
docs/meta/: README.md  conversion-php-python.md  info.md  project-context.md
docs/postman/: README.md  (+1 more)
docs/prompts/: README.md  (+1 more)
public/: data-deletion.html  privacy.html
python/sicoob_service/: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
python/sicoob_service/src/sicoob_service/: __init__.py  __main__.py  app.py  banking_v3.py  bootstrap.py  certificate_tools.py  database.py  exceptions.py  settings.py  token_v3.py
python/sicoob_service/tests/: conftest.py  sandbox_smoke.py  test_api.py  test_endpoints.py  test_token_v3.py
scripts/: deploy.sh
services/: config.js  constants.js  conversation.js  graph-api.js  interacaoClient.js  mailer.js  message.js  redis.js  sicoobClient.js
sicoob/: escopo.md
site/: README_SITE.md  styles.css
src/: main.ts
test/: cpf.test.js  webhook.test.js
(+100 files in other folders)
